# bevy-demo

./: .envrc  .gitattributes  .gitignore  .typos.toml  Cargo.toml  Justfile  README.md  flake.nix  justfile
examples/: bevy_book_demo.rs  bevy_book_ecs.rs  component_change_detection.rs  custom_query_param.rs  fixed_timestep.rs  game_round_ecs.rs  generic_system.rs  hierarchy.rs  level_up_ecs.rs  one_shot_systems.rs  parallel_query.rs  remove_detection.rs  run_conditions.rs  state.rs  system_param.rs  system_piping.rs
src/: main.rs
