[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
license = "MIT OR Apache-2.0"

[profile.dev]
# Enable a small amount of optimization in debug mode.
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies (including Bevy).
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.75"
bevy = "0.12.1"
rand = "0.8.5"
