# ------- #
# package
# ------- #

[package]
name = "bevy-demo"
authors = ["Yusong Lai <yusonglai64@gmail.com>"]
repository = "https://github.com/whisperpine/bevy-demo"
description = "A demo project to experiment with bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"

# Rustc lints (https://doc.rust-lang.org/rustc/lints/index.html).
[workspace.lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "forbid"

# Rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html).
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# Clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
[workspace.lints.clippy]
# Clippy lint groups (https://doc.rust-lang.org/stable/clippy/lints.html).
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Indivisual clippy lints (https://rust-lang.github.io/rust-clippy/stable/index.html).
needless_pass_by_value = "allow"
rest_pat_in_fully_bound_structs = "warn"
lossy_float_literal = "warn"
empty_enum_variants_with_brackets = "warn"
verbose_file_reads = "warn"
suboptimal_flops = "warn"
str_to_string = "warn"
integer_division = "warn"
allow_attributes = "warn"
imprecise_flops = "warn"
exit = "warn"

# ----------- #
# profile.dev
# ----------- #

[profile.dev]
# Enable a small amount of optimization in debug mode.
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies (including Bevy).
opt-level = 3

# --------------- #
# profile.release
# --------------- #

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

# -------------------- #
# profile.wasm-release
# -------------------- #

[profile.wasm-release]
inherits = "release"
# Rustc supports two "optimize for size" levels:  opt-level = "s" and "z".
# These names were inherited from clang / LLVM and are not too descriptive
# but "z" is meant to give the idea that it produces smaller binaries than "s".
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimize-for-size
opt-level = "z"
# By compiling as a single codegen unit (i.e. not in parallel), it's possible
# to reduce size even further at the expense of compilation time.
codegen-units = 1
# By enabling link-time optimization, we can reduce size even further.
# By telling cargo to optimize at the link stage (in addition to the
# normal optimizations during the compilation stage).
lto = true

# By overriding our dependencies' compilation settings, we can further optimize for size.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.wasm-release.package."*"]
codegen-units = 1
opt-level = "z"

# ------------ #
# dependencies
# ------------ #

[dependencies.bevy]
version = "0.18.1"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
